# prom-manager

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  test.sh
http/: Cargo.toml
http/src/: http.rs  lib.rs  router.rs  types.rs
macros/: Cargo.toml
macros/examples/: demo.rs
macros/src/: lib.rs
src/: machine.rs  main.rs  prometheus.rs  service.rs  state.rs
