[package]
name = "prom-manager"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
clap = "4.0.16"
env_logger = "0.9.1"
futures = "0.3.24"
log = "0.4.17"
reqwest = "0.11.12"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = {version = "1.0.86"}
tokio = "1.21.2"
http = {version ="0.1.0", path="./http"}
