[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
macros = {version="0.1.0", path="../macros"}
reqwest = "0.11.12"
tokio = {version="1.21.2", features=["full"]}
